force-app/main/default/objects/Int_Agreement_Line_Asset__c/Int_Agreement_Line_Asset__c.object-meta.xml
<CustomObject>
    <description>Int Junction Object- Agreement Lines &amp; Assets</description>
    <label>Int Agreement Line Asset</label>
    <nameField>
        <displayFormat>ALA-{0000000000}</displayFormat>
        <label>Agreement Line Asset Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreement Line Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>