force-app/main/default/objects/Int_Agreement_Line_Asset__c/fields/Agreement_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Line_Number__c</fullName>
    <description>Agreement Line Number</description>
    <label>Agreement Line Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>