force-app/main/default/objects/Int_Agreement_Line_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Name</description>
    <label>Asset Name</label>
    <referenceTo>Int_Asset__c</referenceTo>
    <relationshipLabel>Int Agreement Line Assets</relationshipLabel>
    <relationshipName>Int_Agreement_Line_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>