force-app/main/default/objects/Int_Agreement_Line_Asset__c/fields/Asset_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Number__c</fullName>
    <description>Asset Number</description>
    <label>Asset Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>