force-app/main/default/objects/Int_Agreement_Line_Asset__c/fields/Asset_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Asset_Source_System__c</fullName>
    <description>Asset Source System</description>
    <label>Asset Source System</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>