force-app/main/default/objects/Int_Agreement_Line_Asset__c/fields/Committed__c.field-meta.xml
<CustomField>
    <fullName>Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Committed check box</description>
    <label>Committed</label>
    <type>Checkbox</type>
</CustomField>