force-app/main/default/objects/Int_Agreement_Line_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Line_Name__c</columns>
    <columns>Asset_Name__c</columns>
    <columns>Asset_Number__c</columns>
    <columns>Agreement_Source_System__c</columns>
    <columns>Asset_Source_System__c</columns>
    <columns>Agreement_Line_Number__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Committed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>